--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -1889,20 +1889,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "これが何かお分かりになるでしょう? これは大切な宝物…｡冬の日の出会い､はじめてもらった薔薇､秋の日の紅葉…全てが詰まっていますわ｡OOちゃまと､わたくしの全てが…",
-                        "comments_my_1": "未来に…羽ばたきたいですわ!",
-                        "comments_my_2": "この世界を…歌で満たしますわ",
-                        "comments_my_3": "これは…お恥ずかしいですね",
-                        "comments_my_4": "ｵｰﾃﾞｨｼｮﾝの悔しさも､ﾚｯｽﾝのつらさも､笑顔以外だってｺｺに…",
-                        "comments_my_max": "この一枚…憶えてらして? そう､大切なあの日の思い出ですわ",
-                        "comments_work_1": "さぁ､心の鍵で…解き放って…",
-                        "comments_work_2": "大切なものに､形はないですわ",
-                        "comments_work_3": "宝箱の中身は…もちろん…ｳﾌﾌ",
-                        "comments_work_4": "これからも新しい宝物を､この箱いっぱいに詰め込みますわよ?",
-                        "comments_work_max": "これはともに撮ったｳｴﾃﾞｨﾝｸﾞ写真…人生最高の瞬間ですわ…♪",
-                        "comments_work_love_up": "そう…｡宝箱を開ける鍵は､OOちゃま､ｱﾅﾀも…",
-                        "comments_live": "想い出を大切に…",
-                        "comments_love_max": "宝箱の中は…ｱｲﾄﾞﾙになって以来の全てが詰まってますわ｡だから､OOちゃまとわたくし､鍵は一つずつ…"
+                        "comment": "이게 뭔지 아시겠어요? 이건 소중한 보물…. 겨울날의 만남, 처음으로 받았던 장미, 가을날의 단풍… 전부가 담겨 있어요. OO 쨔마와, 저의 전부가…",
+                        "comments_my_1": "미래로… 날갯짓하고 싶어요!",
+                        "comments_my_2": "이 세계를… 노래로 가득 채울게요.",
+                        "comments_my_3": "이건… 부끄럽네요.",
+                        "comments_my_4": "오디션의 분함도, 레슨의 괴로움도, 미소 이외에도 역시 여기에…",
+                        "comments_my_max": "이 한 장… 기억하시는지? 그래요, 소중한 그 날의 추억이에요.",
+                        "comments_work_1": "자, 마음의 열쇠로… 풀어서…",
+                        "comments_work_2": "소중한 것에, 형태는 없어요.",
+                        "comments_work_3": "보물상자의 내용은… 물론… 우후후.",
+                        "comments_work_4": "앞으로도 새로운 보물을, 이 상자에 가득히 넣을게요?",
+                        "comments_work_max": "이건 함께 찍은 웨딩 사진… 인생 최고의 순간이에요…♪",
+                        "comments_work_love_up": "그렇지…. 보물상자를 여는 열쇠는, OO 쨔마, 당신도…",
+                        "comments_live": "추억을 소중히…",
+                        "comments_love_max": "보물상자 안에는… 아이돌이 된 이래의 모든 것이 가득차있어요. 그러니까, OO 쨔마와 저, 열쇠는 하나씩…"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1427101/idolcomment.mp3",
@@ -1968,20 +1968,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "今日の桃華は閉じ込められた鳥籠のｶﾅﾘｱ｡その声を喜びの歌に変えるため､檻の鍵を開け､このわたくしを大空に解き放ってくださる? その鍵は…そう､OOちゃま､ｱﾅﾀですわ…!",
-                        "comments_my_1": "未来に…羽ばたきたいですわ!",
-                        "comments_my_2": "この世界を…歌で満たしますわ",
-                        "comments_my_3": "大空を夢見る､鳥のように…",
-                        "comments_my_4": "みなさまの声が､わたくしを再び天へ導いてくださいますの…!",
-                        "comments_my_max": "檻の中の鳥は…昔のわたくしのようで｡少し､切なくなりますわ",
-                        "comments_work_1": "さぁ､心の鍵で…解き放って…",
-                        "comments_work_2": "大切なものに､形はないですわ",
-                        "comments_work_3": "切ないﾊﾞﾗｰﾄﾞも､得意ですのよ",
-                        "comments_work_4": "傷つき､翼を失った鳥…｡その悲しみと希望を…歌いますわ!",
-                        "comments_work_max": "OOちゃまがくれた新たな翼で､再び遥かな大空へ…!",
-                        "comments_work_love_up": "さぁ､OOちゃま､今こそ､その手で鳥籠の鍵を…",
-                        "comments_live": "希望への…ｽﾜﾝｿﾝｸﾞを…!",
-                        "comments_love_max": "解き放たれた翼…｡まるでわたくしたちの未来のようですわね｡さぁ､OOちゃま｡まだ見ぬ空へ､飛び立ちますわよ!"
+                        "comment": "오늘의 모모카는 감금당한 새장의 카나리아. 그 소리를 기쁨의 노래로 바꾸기 위해, 감옥의 열쇠를 열고, 이 저를 넓은 하늘에 풀어주실래요? 그 열쇠는… 그래요, OO 쨔마, 당신이에요…!",
+                        "comments_my_1": "미래로… 날갯짓하고 싶어요!",
+                        "comments_my_2": "이 세계를… 노래로 가득 채울게요.",
+                        "comments_my_3": "넓은 하늘을 꿈꾸는, 새처럼…",
+                        "comments_my_4": "여러분의 목소리가, 저를 다시 하늘로 이끌어주세요…!",
+                        "comments_my_max": "감옥 속의 새는… 옛날의 저 같아서. 조금, 애달파져요.",
+                        "comments_work_1": "자, 마음의 열쇠로… 풀어서…",
+                        "comments_work_2": "소중한 것에, 형태는 없어요.",
+                        "comments_work_3": "애절한 발라드도, 숙달됐어요.",
+                        "comments_work_4": "상처입고, 날개를 잃은 새…. 그 슬픔과 희망을… 노래해요!",
+                        "comments_work_max": "OO 쨔마가 주신 새로운 날개로, 다시 아득한 하늘로…!",
+                        "comments_work_love_up": "자, OO 쨔마, 지금이야말로, 그 손으로 새장의 열쇠를…",
+                        "comments_live": "희망으로의… 스완송을…!",
+                        "comments_love_max": "해방된 날개…. 마치 우리들의 미래같네요. 자, OO 쨔마. 아직 보지 못한 하늘로, 날아오를게요!"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1527102/idolcomment.mp3",
@@ -2053,20 +2053,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "遂にCDﾃﾞﾋﾞｭｰですわね…うふふっ､ﾌｧﾝの皆様へ感謝を込めて､歌声をお届けしますの♪さぁOOちゃま…わたくしをｽﾃｰｼﾞへと送り出してくださいまし｡今こそ､花開く時ですわ!",
-                        "comments_my_1": "華々しく､ﾃﾞﾋﾞｭｰいたしますわ",
-                        "comments_my_2": "この歌声を､お届けしますわ♪",
-                        "comments_my_3": "可憐に歌いこなしてみせますの",
-                        "comments_my_4": "緊張など､しておりませんの｡…これは､ただの武者震いですわ",
-                        "comments_my_max": "OOちゃま…本番直前まで､一緒にいてくださいまし",
-                        "comments_work_1": "今こそ､日頃の研鑽の成果を…!",
-                        "comments_work_2": "本当に驚くのは､ｺﾚからですわ",
-                        "comments_work_3": "ﾊﾞﾗのように､美しく､可憐に…",
-                        "comments_work_4": "会場の全員を虜にしますわ｡もちろん､OOちゃまも♪",
-                        "comments_work_max": "OOちゃまの手は､やさしく､力強いですわね…ふふ♪",
-                        "comments_work_love_up": "わたくしの…手を握ってくださいまし｡…ふぅ､安心しますの…",
-                        "comments_live": "美しく､舞い踊りますわ♪",
-                        "comments_love_max": "うふふっ､胸のﾄﾞｷﾄﾞｷが止まりませんの｡今のわたくしの､OOちゃまへの想い…その全てを､この歌に込めますわ♪"
+                        "comment": "드디어 CD 데뷔네요… 우후훗, 팬 여러분꼐 감사를 담아, 노랫소리를 전해드릴게요♪ 자 OO 쨔마… 저를 스테이지로 보내주시면 좋겠어요. 지금이야말로, 꽃이 필 시간이에요!",
+                        "comments_my_1": "화려하게, 데뷔할게요.",
+                        "comments_my_2": "이 노랫소리를, 전해드릴게요♪",
+                        "comments_my_3": "가련하게 노래를 불러보일게요.",
+                        "comments_my_4": "긴장 따위, 하지 않고 있어요. …이건, 단지 흥분으로 떨리는 거예요.",
+                        "comments_my_max": "OO 쨔마… 본방 직전까지, 함께 있어 주시면 좋겠어요.",
+                        "comments_work_1": "지금이야말로, 평소의 연찬의 성과를…!",
+                        "comments_work_2": "정말로 놀라는 건, 지금부터예요.",
+                        "comments_work_3": "장미처럼, 아름답고, 가련하게…",
+                        "comments_work_4": "회장의 전원을 사로잡을게요. 물론, OO 쨔마도♪",
+                        "comments_work_max": "OO 쨔마의 손은, 상냥하고, 힘있네요… 후후♪",
+                        "comments_work_love_up": "제… 손을 잡아주시면 좋겠어요. …후우, 안심이 돼요…",
+                        "comments_live": "아름답게, 춤출게요♪",
+                        "comments_love_max": "우후훗, 가슴의 두근두근이 멈추지 않아요. 지금 저의, OO 쨔마에 대한 마음… 그 전부를, 이 노래에 담을게요♪"
                     },
                     "voice": {
                         "comment": null,
@@ -2132,20 +2132,20 @@ kg
                         "card_cv": null
                     },
                     "comments": {
-                        "comment": "いよいよｸﾞﾗﾝﾄﾞ･ﾌｨﾅｰﾚの時が近いですわね! 今､わたくしがこの場に立っているのは…､わたくしの歌声に耳を傾けてくださった､貴方のおかげ…｡この気持ちを､受け取ってくださいまし♪",
-                        "comments_my_1": "華々しく､ﾃﾞﾋﾞｭｰいたしますわ",
-                        "comments_my_2": "この歌声を､お届けしますわ♪",
-                        "comments_my_3": "心の底から､感謝を捧げますの",
-                        "comments_my_4": "大舞台でもｴﾚｶﾞﾝﾄに｡それがﾚﾃﾞｨｰというものですの｡うふふ♪",
-                        "comments_my_max": "全ては､OOちゃまとの､輝かしい未来のためですわ…",
-                        "comments_work_1": "今こそ､日頃の研鑽の成果を…!",
-                        "comments_work_2": "本当に驚くのは､ｺﾚからですわ",
-                        "comments_work_3": "貴方の胸に､甘い歌声の棘を…",
-                        "comments_work_4": "今だけは､全てを忘れ…わたくしに夢中になってくださいまし",
-                        "comments_work_max": "期待以上を見せてこそ一流ですわよね! OOちゃま!",
-                        "comments_work_love_up": "OOちゃまの期待に応える…それがわたくしの責任!",
-                        "comments_live": "この魂を､貴方の胸に…",
-                        "comments_love_max": "今日に至るまでの全てに､感謝と敬意を示しますの｡そして､これからも…OOちゃまと共に歩むことを…誓いますわ"
+                        "comment": "드디어 그랜드･피날레의 시간이 가까워졌네요! 지금, 제가 이 자리에 서 있는 건…, 제 노랫소리에 귀기울여주신, 당신의 덕…. 그 마음을, 받아주셨으면 좋겠어요♪",
+                        "comments_my_1": "화려하게, 데뷔할게요.",
+                        "comments_my_2": "이 노랫소리를, 전해드릴게요♪",
+                        "comments_my_3": "마음 깊은 곳에서, 감사를 바쳐요.",
+                        "comments_my_4": "큰 무대에서도 엘레강트하게. 그게 레이디란 거예요. 우후후♪",
+                        "comments_my_max": "모든 건, OO 쨔마와의, 빛나는 미래를 위해서예요…",
+                        "comments_work_1": "지금이야말로, 평소의 연찬의 성과를…!",
+                        "comments_work_2": "정말로 놀라는 건, 지금부터예요.",
+                        "comments_work_3": "당신의 가슴에, 달콤한 노랫소리의 자극을…",
+                        "comments_work_4": "지금만은, 모든 걸 잊고… 저에게 푹 빠져주셨으면.",
+                        "comments_work_max": "기대이상을 보여주는 것이야말로 일류네요! OO쨔마!",
+                        "comments_work_love_up": "OO 쨔마의 기대에 부응하는… 그것이 저의 책임!",
+                        "comments_live": "이 혼을, 당신의 가슴에…",
+                        "comments_love_max": "오늘에 이르기까지의 모든 것에, 감사와 경의를 표해요. 그리고, 앞으로도… OO 쨔마와 함께 걸어갈 것을… 맹세해요."
                     },
                     "voice": {
                         "comment": null,
