--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -2211,20 +2211,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "ﾊﾟｰﾃｨｰなんてと思っていたのですけど､昨夜は楽しみで､なかなか寝つけませんでしたの｡ｳﾌ､きっと素敵な一日になりますわね｡この一年を飾るにふさわしい日に｡ね､OOちゃま♪",
-                        "comments_my_1": "特別な一日になりそうですわ♪",
-                        "comments_my_2": "楽しいﾊﾟｰﾃｨｰは久しぶりですの",
-                        "comments_my_3": "夜の舞踏会も､楽しみですわね",
-                        "comments_my_4": "OOちゃまとお話したいこと､たくさんありますの♪",
-                        "comments_my_max": "舞踏会のお相手は､決まっていますわ｡ね､OOちゃま",
-                        "comments_work_1": "この記念日を嬉しく思いますわ",
-                        "comments_work_2": "気品ある振る舞いを見せますわ",
-                        "comments_work_3": "忘れられないﾊﾟｰﾃｨｰにしますわ",
-                        "comments_work_4": "今この場で微笑むために…日々努力を重ねておりますの",
-                        "comments_work_max": "今日をOOちゃまと迎えられたことが､嬉しいですわ",
-                        "comments_work_love_up": "今日のこの日に至るまでの､すべてが…素敵な思い出ですわ",
-                        "comments_live": "楽しいﾊﾟｰﾃｨｰにしましょう",
-                        "comments_love_max": "記念すべき日にOOちゃまといられること…幸せですわ｡ﾊﾟｰﾃｨｰは始まったばかり…わたくしと､楽しみましょう♪"
+                        "comment": "파티쯤이야라고 생각하고 있었지만요, 어젯밤은 기대돼서, 좀처럼 잠들 수 없었어요. 우후, 분명 멋진 하루가 되겠죠. 이 한해를 의미있게 장식하기에 어울리는 날이. 그렇죠, OO 쨔마♪",
+                        "comments_my_1": "특별한 하루가 될 것 같아요♪",
+                        "comments_my_2": "즐거운 파티는 오랜만이에요.",
+                        "comments_my_3": "밤의 무도회도, 기대되네요.",
+                        "comments_my_4": "OO 쨔마와 얘기하고 싶은 것, 잔뜩 있어요♪",
+                        "comments_my_max": "무도회의 상대는, 정해져 있어요. 그렇죠, OO 쨔마.",
+                        "comments_work_1": "이 기념일을 기쁘게 생각해요.",
+                        "comments_work_2": "기품 있는 행동거지를 보여주겠어요.",
+                        "comments_work_3": "잊을 수 없는 파티로 만들게요.",
+                        "comments_work_4": "지금 이 자리에서 미소짓기 위해서… 매일 노력을 거듭하고 있어요.",
+                        "comments_work_max": "오늘을 OO 쨔마와 맞이할 수 있다는 게, 기뻐요.",
+                        "comments_work_love_up": "오늘의 이날에 이르기까지의, 모든 것이… 멋진 추억이에요.",
+                        "comments_live": "즐거운 파티로 만들죠.",
+                        "comments_love_max": "기념할만한 날에 OO 쨔마와 있을 수 있는 게… 행복해요. 파티는 이제 시작됐을 뿐… 저와, 즐기죠♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429601/idolcomment.mp3",
@@ -2295,20 +2295,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "素敵なﾊﾟｰﾃｨｰですわね…｡だけど､わたくし…､まだまだ楽しみ足りませんの♪さぁ､OOちゃま､お楽しみはこれからですわ｡わたくしの手を取って､今宵のｴｽｺｰﾄをお願いします♪",
-                        "comments_my_1": "特別な一日になりそうですわ♪",
-                        "comments_my_2": "楽しいﾊﾟｰﾃｨｰは久しぶりですの",
-                        "comments_my_3": "このﾄﾞﾚｽはお気に入りですわ♪",
-                        "comments_my_4": "みんな､OOちゃまに輝く方法を教わったのですわ",
-                        "comments_my_max": "ｳﾌﾌ､OOちゃまのｴｽｺｰﾄは､いつだって完璧ですの♪",
-                        "comments_work_1": "この記念日を嬉しく思いますわ",
-                        "comments_work_2": "気品ある振る舞いを見せますわ",
-                        "comments_work_3": "皆さまも､立派な淑女ですわ♪",
-                        "comments_work_4": "この微笑みを絶やさぬため､さらに自分に磨きをかけますの",
-                        "comments_work_max": "OOちゃまとわたくしにとっても､今宵は特別な夜…",
-                        "comments_work_love_up": "夜更かしも平気ですわ｡わたくし､子どもじゃありませんのよ",
-                        "comments_live": "素敵な夜をお届けしますわ",
-                        "comments_love_max": "ﾊﾟｰﾃｨｰは終わるもの…｡でも､わたくしたちの関係は､ずっと続きますの｡OOちゃま､次のﾊﾟｰﾃｨｰをまた迎えましょう"
+                        "comment": "멋진 파티네요…. 하지만, 저…, 아직도 즐거움이 부족해요♪ 자, OO 쨔마, 즐거움은 이제부터예요. 제 손을 잡고, 오늘밤의 에스코트를 부탁드려요♪",
+                        "comments_my_1": "특별한 하루가 될 것 같아요♪",
+                        "comments_my_2": "즐거운 파티는 오랜만이에요.",
+                        "comments_my_3": "이 드레스는 마음에 들어요♪",
+                        "comments_my_4": "모두, OO 쨔마께 빛나는 방법을 배웠어요.",
+                        "comments_my_max": "우후후, OO 쨔마의 에스코트는, 언제나 완벽해요♪",
+                        "comments_work_1": "이 기념일을 기쁘게 생각해요.",
+                        "comments_work_2": "기품 있는 행동거지를 보여주겠어요.",
+                        "comments_work_3": "여러분도, 훌륭한 숙녀예요♪",
+                        "comments_work_4": "이 미소가 끊이지 않기 위해서, 더욱 자신을 연마하는 거예요.",
+                        "comments_work_max": "OO 쨔마와 저에게 있어서도, 오늘밤은 특별한 밤…",
+                        "comments_work_love_up": "밤샘도 아무렇지도 않아요. 저, 어린애가 아니에요.",
+                        "comments_live": "멋진 밤을 전해드릴게요.",
+                        "comments_love_max": "파티는 끝나는 것…. 하지만, 저희들의 관계는, 계속 이어져요. OO 쨔마, 다음 파티를 또 맞이하죠."
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529602/idolcomment.mp3",
@@ -2385,20 +2385,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "ﾊﾟｰﾃｨｰなんてと思っていたのですけど､昨夜は楽しみで､なかなか寝つけませんでしたの｡ｳﾌ､きっと素敵な一日になりますわね｡この一年を飾るにふさわしい日に｡ね､OOちゃま♪",
-                        "comments_my_1": "特別な一日になりそうですわ♪",
-                        "comments_my_2": "楽しいﾊﾟｰﾃｨｰは久しぶりですの",
-                        "comments_my_3": "夜の舞踏会も､楽しみですわね",
-                        "comments_my_4": "OOちゃまとお話したいこと､たくさんありますの♪",
-                        "comments_my_max": "舞踏会のお相手は､決まっていますわ｡ね､OOちゃま",
-                        "comments_work_1": "この記念日を嬉しく思いますわ",
-                        "comments_work_2": "気品ある振る舞いを見せますわ",
-                        "comments_work_3": "忘れられないﾊﾟｰﾃｨｰにしますわ",
-                        "comments_work_4": "今この場で微笑むために…日々努力を重ねておりますの",
-                        "comments_work_max": "今日をOOちゃまと迎えられたことが､嬉しいですわ",
-                        "comments_work_love_up": "今日のこの日に至るまでの､すべてが…素敵な思い出ですわ",
-                        "comments_live": "楽しいﾊﾟｰﾃｨｰにしましょう",
-                        "comments_love_max": "記念すべき日にOOちゃまといられること…幸せですわ｡ﾊﾟｰﾃｨｰは始まったばかり…わたくしと､楽しみましょう♪"
+                        "comment": "파티쯤이야라고 생각하고 있었지만요, 어젯밤은 기대돼서, 좀처럼 잠들 수 없었어요. 우후, 분명 멋진 하루가 되겠죠. 이 한해를 의미있게 장식하기에 어울리는 날이. 그렇죠, OO 쨔마♪",
+                        "comments_my_1": "특별한 하루가 될 것 같아요♪",
+                        "comments_my_2": "즐거운 파티는 오랜만이에요.",
+                        "comments_my_3": "밤의 무도회도, 기대되네요.",
+                        "comments_my_4": "OO 쨔마와 얘기하고 싶은 것, 잔뜩 있어요♪",
+                        "comments_my_max": "무도회의 상대는, 정해져 있어요. 그렇죠, OO 쨔마.",
+                        "comments_work_1": "이 기념일을 기쁘게 생각해요.",
+                        "comments_work_2": "기품 있는 행동거지를 보여주겠어요.",
+                        "comments_work_3": "잊을 수 없는 파티로 만들게요.",
+                        "comments_work_4": "지금 이 자리에서 미소짓기 위해서… 매일 노력을 거듭하고 있어요.",
+                        "comments_work_max": "오늘을 OO 쨔마와 맞이할 수 있다는 게, 기뻐요.",
+                        "comments_work_love_up": "오늘의 이날에 이르기까지의, 모든 것이… 멋진 추억이에요.",
+                        "comments_live": "즐거운 파티로 만들죠.",
+                        "comments_love_max": "기념할만한 날에 OO 쨔마와 있을 수 있는 게… 행복해요. 파티는 이제 시작됐을 뿐… 저와, 즐기죠♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1429701/idolcomment.mp3",
@@ -2469,20 +2469,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "素敵なﾊﾟｰﾃｨｰですわね…｡だけど､わたくし…､まだまだ楽しみ足りませんの♪さぁ､OOちゃま､お楽しみはこれからですわ｡わたくしの手を取って､今宵のｴｽｺｰﾄをお願いします♪",
-                        "comments_my_1": "特別な一日になりそうですわ♪",
-                        "comments_my_2": "楽しいﾊﾟｰﾃｨｰは久しぶりですの",
-                        "comments_my_3": "このﾄﾞﾚｽはお気に入りですわ♪",
-                        "comments_my_4": "みんな､OOちゃまに輝く方法を教わったのですわ",
-                        "comments_my_max": "ｳﾌﾌ､OOちゃまのｴｽｺｰﾄは､いつだって完璧ですの♪",
-                        "comments_work_1": "この記念日を嬉しく思いますわ",
-                        "comments_work_2": "気品ある振る舞いを見せますわ",
-                        "comments_work_3": "皆さまも､立派な淑女ですわ♪",
-                        "comments_work_4": "この微笑みを絶やさぬため､さらに自分に磨きをかけますの",
-                        "comments_work_max": "OOちゃまとわたくしにとっても､今宵は特別な夜…",
-                        "comments_work_love_up": "夜更かしも平気ですわ｡わたくし､子どもじゃありませんのよ",
-                        "comments_live": "素敵な夜をお届けしますわ",
-                        "comments_love_max": "ﾊﾟｰﾃｨｰは終わるもの…｡でも､わたくしたちの関係は､ずっと続きますの｡OOちゃま､次のﾊﾟｰﾃｨｰをまた迎えましょう"
+                        "comment": "멋진 파티네요…. 하지만, 저…, 아직도 즐거움이 부족해요♪ 자, OO 쨔마, 즐거움은 이제부터예요. 제 손을 잡고, 오늘밤의 에스코트를 부탁드려요♪",
+                        "comments_my_1": "특별한 하루가 될 것 같아요♪",
+                        "comments_my_2": "즐거운 파티는 오랜만이에요.",
+                        "comments_my_3": "이 드레스는 마음에 들어요♪",
+                        "comments_my_4": "모두, OO 쨔마께 빛나는 방법을 배웠어요.",
+                        "comments_my_max": "우후후, OO 쨔마의 에스코트는, 언제나 완벽해요♪",
+                        "comments_work_1": "이 기념일을 기쁘게 생각해요.",
+                        "comments_work_2": "기품 있는 행동거지를 보여주겠어요.",
+                        "comments_work_3": "여러분도, 훌륭한 숙녀예요♪",
+                        "comments_work_4": "이 미소가 끊이지 않기 위해서, 더욱 자신을 연마하는 거예요.",
+                        "comments_work_max": "OO 쨔마와 저에게 있어서도, 오늘밤은 특별한 밤…",
+                        "comments_work_love_up": "밤샘도 아무렇지도 않아요. 저, 어린애가 아니에요.",
+                        "comments_live": "멋진 밤을 전해드릴게요.",
+                        "comments_love_max": "파티는 끝나는 것…. 하지만, 저희들의 관계는, 계속 이어져요. OO 쨔마, 다음 파티를 또 맞이하죠."
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1529702/idolcomment.mp3",
@@ -2553,20 +2553,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "ふぅ､暑いですわね…冷えたお水が､気持ちいい…｡こんな日は､冷えたｱｲｽﾃｨｰをいただきたいですわね｡掃除中のﾌﾟｰﾙｻｲﾄﾞなんて､OOちゃまと過ごすには趣に欠けますけど…♪",
-                        "comments_my_1": "日本で過ごす夏も素敵ですわね",
-                        "comments_my_2": "あぁ､ｸﾗｸﾗしてしまいそう…",
-                        "comments_my_3": "お掃除は大変でも…大事ですの",
-                        "comments_my_4": "うふ…綺麗なﾌﾟｰﾙで一緒に泳ぐのを楽しみに､頑張りましょう",
-                        "comments_my_max": "真夏の空の下で寄り添うふたり…ふふっ､青春ですわね",
-                        "comments_work_1": "桃華の水着をお披露目ですわ!",
-                        "comments_work_2": "涼しい夏をお届けしますわ",
-                        "comments_work_3": "素敵な夏にいたしましょう♪",
-                        "comments_work_4": "まぁ､ご覧になって! わたくしが磨いた場所が､こんな綺麗に!",
-                        "comments_work_max": "OOちゃまとのﾁｰﾑﾜｰｸが､ﾌﾟｰﾙを輝かせますのよ",
-                        "comments_work_love_up": "OOちゃまの体も火照って……無理は禁物ですのよ",
-                        "comments_live": "わたくしが輝かせますわ!",
-                        "comments_love_max": "うふふっ､お疲れ様､OOちゃま｡ﾌﾟｰﾙ､綺麗になりましたわね｡これも､わたくしたちふたりで掴んだ輝き…ｽﾃｷですわ"
+                        "comment": "후우, 덥네요… 차가운 물이, 기분 좋아…. 이런 날은, 차가운 아이스티를 마시고 싶네요. 청소 중인 풀사이드라니, OO 쨔마와 시간을 보내기엔 운치가 부족하지만요…♪",
+                        "comments_my_1": "일본에서 보내는 여름도 멋지네요.",
+                        "comments_my_2": "아아, 어질어질해질 것 같아…",
+                        "comments_my_3": "청소는 힘들어도… 중요해요.",
+                        "comments_my_4": "우후… 깨끗한 풀에서 함께 수영하는 걸 즐기면서, 힘내죠.",
+                        "comments_my_max": "한여름 하늘 아래에서 바싹 다가선 두사람… 후훗, 청춘이네요.",
+                        "comments_work_1": "모모카의 수영복을 선보이네요!",
+                        "comments_work_2": "시원한 여름을 전해드릴게요.",
+                        "comments_work_3": "멋진 여름을 만들어보죠♪",
+                        "comments_work_4": "어머, 보셔요! 제가 닦은 곳이, 이렇게 깨끗하게!",
+                        "comments_work_max": "OO 쨔마와의 팀워크가, 풀을 빛나게 해요.",
+                        "comments_work_love_up": "OO 쨔마의 몸도 달아올라서…… 무리는 금물이에요.",
+                        "comments_live": "제가 빛낼게요!",
+                        "comments_love_max": "우후훗, 수고하셨어요, OO 쨔마. 풀, 깨끗해졌네요. 이것도, 우리들 두사람이 손에 넣은 반짝임… 정말 멋져요."
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1433801/idolcomment.mp3",
@@ -2632,20 +2632,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "こう…でよろしくて? うふふ､魅力的に映してくださいまし｡夏ですもの､わたくしも刺激的にまいりますわ! ねぇ､OOちゃま｡撮影が終わったら､このﾋﾞｰﾁﾎﾞｰﾙで遊びましょうね",
-                        "comments_my_1": "日本で過ごす夏も素敵ですわね",
-                        "comments_my_2": "あぁ､ｸﾗｸﾗしてしまいそう…",
-                        "comments_my_3": "日焼け肌…お風呂が怖いかも…",
-                        "comments_my_4": "この格好は少々はしたないかも…でも､何事も経験ですものね",
-                        "comments_my_max": "OOちゃまが喜んでくださるなら､はりきりますわ!",
-                        "comments_work_1": "桃華の水着をお披露目ですわ!",
-                        "comments_work_2": "涼しい夏をお届けしますわ",
-                        "comments_work_3": "面白い角度で撮りますのね…",
-                        "comments_work_4": "ﾋﾞｰﾁﾎﾞｰﾙの上に座るんですの? 少し危ないのではなくって?",
-                        "comments_work_max": "OOちゃま､おいでになって｡一枚くらい､一緒に…",
-                        "comments_work_love_up": "OOちゃまの視線､太陽のよう｡お仕事への情熱､ｽﾃｷ…",
-                        "comments_live": "夏にも華は咲きますのよ♪",
-                        "comments_love_max": "撮影は終わりましたのね? では､約束通りﾋﾞｰﾁﾎﾞｰﾙで遊びましょう｡ｶﾒﾗ越しでない､ありのままのわたくしをご覧になって♪"
+                        "comment": "이걸… 로 괜찮은가요? 우후후, 매력적으로 비춰주셨으면 좋겠어요. 여름인 걸요, 저도 자극적으로 갈게요! 저기, OO 쨔마. 촬영이 끝나면, 이 비치볼로 놀죠.",
+                        "comments_my_1": "일본에서 보내는 여름도 멋지네요.",
+                        "comments_my_2": "아아, 어질어질해 질 것 같아…",
+                        "comments_my_3": "햇볕에 탄 피부… 욕탕이 무서울지도…",
+                        "comments_my_4": "이 모습은 조금 상스러울지도… 그래도, 어떤 일도 경험인 걸요.",
+                        "comments_my_max": "OO 쨔마가 기뻐하신다면, 힘낼게요!",
+                        "comments_work_1": "모모카의 수영복을 선보이네요!",
+                        "comments_work_2": "시원한 여름을 전해드릴게요.",
+                        "comments_work_3": "재밌는 각도로 찍네요…",
+                        "comments_work_4": "비치볼 위에 앉는 건가요? 조금 위험한 건 아닌지?",
+                        "comments_work_max": "OO 쨔마, 오셔요. 한 장 정도는, 함께…",
+                        "comments_work_love_up": "OO 쨔마의 시선, 태양같아. 일에 대한 정열, 대단해…",
+                        "comments_live": "여름에도 꽃은 피어요♪",
+                        "comments_love_max": "촬영은 끝났군요? 그럼, 약속대로 비치볼로 놀죠. 카메라 너머가 아닌, 있는 그대로의 저를 보시고♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1533802/idolcomment.mp3",
