--- a/idol_gallery/idol_detail/momoka_k.html
+++ b/idol_gallery/idol_detail/momoka_k.html
@@ -2711,20 +2711,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "さぁ､ｱﾅﾀのお顔をお見せくださいまし…まあ! きちんと並べたつもりですのに､なんて面白いお顔! うふふっ､これが福笑い…♪OOちゃまもおやりになってみて｡楽しいですわよ",
-                        "comments_my_1": "楽しい笑顔で参りましょうね",
-                        "comments_my_2": "自然と口元がほころびますわ♪",
-                        "comments_my_3": "あら? もう一度､挑戦しますわ!",
-                        "comments_my_4": "誰が一番､面白いお顔を作れるか競うのもいいですわね",
-                        "comments_my_max": "あら､OOちゃまの福笑いも面白いお顔に…ふふっ!",
-                        "comments_work_1": "上手にできますわよ…ほら♪",
-                        "comments_work_2": "幸も福も､ここにありますのよ",
-                        "comments_work_3": "目隠しはﾄﾞｷﾄﾞｷしますわね…",
-                        "comments_work_4": "簡単に見えて､実は難しい…わたくし､またひとつ学びましたわ",
-                        "comments_work_max": "うふふ､OOちゃま…本当にそこでよろしくって?",
-                        "comments_work_love_up": "手探りでも､OOちゃまとなら怖くありませんの!",
-                        "comments_live": "このお顔なら…いかが?",
-                        "comments_love_max": "わたくしのも､OOちゃまのも､面白いお顔になりましたわね｡でも､失敗ではありませんのよ｡大切な思い出ですわ♪"
+                        "comment": "자, 당신의 얼굴을 보여주시면 좋겠어요… 어머! 똑바로 늘어놓을 생각이었는데, 어찌나 웃긴 얼굴! 우후훗, 이게 후쿠와라이…♪ OO 쨔마도 해보시길. 재밌어요.",
+                        "comments_my_1": "즐거운 미소로 가죠.",
+                        "comments_my_2": "자연히 입가에 미소가 나와요♪",
+                        "comments_my_3": "어머? 다시 한 번, 도전할게요!",
+                        "comments_my_4": "누가 가장, 재밌는 얼굴을 만들지 겨루는 것도 좋네요.",
+                        "comments_my_max": "어머, OO 쨔마의 후쿠와라이도 재밌는 얼굴로… 후훗!",
+                        "comments_work_1": "잘 할 수 있어요… 봐요♪",
+                        "comments_work_2": "행(幸)도 복(福)도,여기에 있어요.",
+                        "comments_work_3": "눈가리개는 두근두근하네요…",
+                        "comments_work_4": "쉬워보여도, 사실은 어려워… 저, 또 하나 배웠어요.",
+                        "comments_work_max": "우후후, OO 쨔마… 정말로 거기로 괜찮으신지?",
+                        "comments_work_love_up": "더듬으며 찾는 것도, OO 쨔마와 함께라면 무섭지 않아요!",
+                        "comments_live": "이 얼굴이라면… 어떤가요?",
+                        "comments_love_max": "제 것도, OO 쨔마 것도, 재밌는 얼굴이 됐네요. 하지만, 실패는 아니에요. 소중한 추억이에요♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1231401/idolcomment.mp3",
@@ -2788,20 +2788,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "ふふっ､踊り慣れてきましたわ｡これは確か…そう､ﾉｯてきた､でしたわね? お神楽ですもの､おめでたく､みやびやかに､楽しくﾉｯて参りましょう｡OOちゃまの心もﾉｯてくださいな♪",
-                        "comments_my_1": "楽しい笑顔で参りましょうね",
-                        "comments_my_2": "自然と口元がほころびますわ♪",
-                        "comments_my_3": "扇越しに､桃華の顔をご覧あれ!",
-                        "comments_my_4": "笛に鼓､手拍子も素敵ですわね｡共に善き神楽を作りましょう",
-                        "comments_my_max": "扇を掲げて見るOOちゃまのお顔､趣深いですわ…",
-                        "comments_work_1": "上手にできますわよ…ほら♪",
-                        "comments_work_2": "幸も福も､ここにありますのよ",
-                        "comments_work_3": "さぁ皆様､ﾉｯてくださいまし♪",
-                        "comments_work_4": "清らかな巫女となり､人の心を踊りなぐさめ､清めましょう…",
-                        "comments_work_max": "次は､OOちゃまに奉納する神楽を舞いましょうね♪",
-                        "comments_work_love_up": "一対の扇のように…共に舞いましょう､OOちゃま",
-                        "comments_live": "ｳｷｳｷと華やかに参りますわ",
-                        "comments_love_max": "楽しそうにﾉｯてくださいましたわね､OOちゃま｡ｱﾅﾀの笑顔こそ､わたくしを奮い立たせる､最高のお神楽ですのよ"
+                        "comment": "후훗, 춤이 익숙해졌어요. 이건 확실히… 그래, 흥을 타다, 였죠? 카구라인걸요, 경사스럽게, 우아하게, 즐겁게 흥을 타죠. OO 쨔마의 마음도 흥을 타시길♪",
+                        "comments_my_1": "즐거운 미소로 가죠.",
+                        "comments_my_2": "자연히 입가에 미소가 나와요♪",
+                        "comments_my_3": "부채 너머로, 모모카의 얼굴을 보세요!",
+                        "comments_my_4": "피리에 북, 손장단도 근사하네요. 함께 좋은 카구라를 만들죠.",
+                        "comments_my_max": "부채를 들고 보는 OO 쨔마의 얼굴, 정취가 깊네요…",
+                        "comments_work_1": "잘 할 수 있어요… 봐요♪",
+                        "comments_work_2": "행(幸)도 복(福)도,여기에 있어요.",
+                        "comments_work_3": "자 여러분, 흥을 타주셨으면♪",
+                        "comments_work_4": "깨끗한 무녀가 되어, 사람의 마음을 춤으로 달래고, 정화하죠…",
+                        "comments_work_max": "다음은, OO 쨔마께 봉납하는 카구라를 춤추죠♪",
+                        "comments_work_love_up": "한 쌍의 부채처럼… 함께 춤추죠, OO 쨔마.",
+                        "comments_live": "신바람난 모습으로 화려하게 갈게요.",
+                        "comments_love_max": "즐거운 듯이 흥을 타주셨네요, OO 쨔마. 당신의 미소야말로, 저를 분발하게 만드는, 최고의 카구라예요."
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1331402/idolcomment.mp3",
@@ -2865,20 +2865,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "とても綺麗…｡ぱちぱちと､懸命に歌って咲き誇る夏の華…和の心を感じますわ｡さぁ､OOちゃまも…今宵の華を､愛でてくださいまし｡わたくしたちの､一瞬の夏を楽しんで…",
-                        "comments_my_1": "消えませんわ｡ずっと､心の中に",
-                        "comments_my_2": "わたくしの隣で､ご覧になって",
-                        "comments_my_3": "時折…夜風も秋混じりですわね",
-                        "comments_my_4": "まぁ! 2本を束ねて一度に? もう､欲張り屋さんですわね♪",
-                        "comments_my_max": "くつろいでくださいね｡この別邸､人払いはしてありますの♪",
-                        "comments_work_1": "ｽﾃｰｼﾞで見る輝きに､そっくり…",
-                        "comments_work_2": "長く､永く…精一杯､まばゆく…",
-                        "comments_work_3": "がんばり屋さん､いい子いい子",
-                        "comments_work_4": "たとえ夜空の大輪でなくとも､美しくあることはできますのね",
-                        "comments_work_max": "惜しみますわ｡だって､OOちゃまと過ごす夏ですもの",
-                        "comments_work_love_up": "花火が照らすOOちゃまのお顔も､趣がありますわ",
-                        "comments_live": "松葉の勢いで弾けますわよ",
-                        "comments_love_max": "…見納めですわね｡では､もう1本点しましょう｡熱い牡丹の華を今一度｡それとも､OOちゃまは桃の華が良いかしら♪"
+                        "comment": "너무 아름다워…. 탁탁하고, 힘껏 노래부르며 화려하게 피는 여름의 꽃… 화(和)의 마음을 느껴요. 자, OO 쨔마도… 오늘밤의 꽃을, 사랑해주시길. 우리들의, 한순간의 여름을 즐기며…",
+                        "comments_my_1": "스러지지 않아요. 계속, 마음속에.",
+                        "comments_my_2": "제 곁에서, 봐주세요.",
+                        "comments_my_3": "이따금… 밤바람도 가을이 섞여있네요.",
+                        "comments_my_4": "어머! 2개를 묶어서 한 번에? 정말, 욕심쟁이네요♪",
+                        "comments_my_max": "편안하게 지내주세요. 이 별장, 둘이 얘기하기 위해서 다른 사람은 내보냈어요♪",
+                        "comments_work_1": "스테이지에서 보는 빛, 그대로…",
+                        "comments_work_2": "길게, 영원히… 힘껏, 눈부시게…",
+                        "comments_work_3": "끝까지 버티는 분, 착한 아이 착한 아이.",
+                        "comments_work_4": "비록 밤하늘의 큰송이가 아닐지라도, 아름다울 수는 있지요.",
+                        "comments_work_max": "아쉬워요. 그야, OO 쨔마와 보내는 여름인걸요.",
+                        "comments_work_love_up": "불꽃이 비추는 OO 쨔마의 얼굴도, 정취가 있어요.",
+                        "comments_live": "솔잎의 기세로 튀어올라요.",
+                        "comments_love_max": "…마지막 기회네요. 그럼, 하나 더 켜죠. 열렬한 모란꽃을 한 번 더. 아니면, OO 쨔마는 복숭아꽃이 좋으실까요♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1442001/idolcomment.mp3",
@@ -2944,20 +2944,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "さぁ､お行きなさい｡天を昇り､彼方まで｡ふふっ､お別れではありません｡いつか見上げる星の灯は､きっとあなたが照らす火ですもの｡それでは､良き旅を｡わたくしを､ずっと照らしていてね",
-                        "comments_my_1": "消えませんわ｡ずっと､心の中に",
-                        "comments_my_2": "わたくしの隣で､ご覧になって",
-                        "comments_my_3": "最後の一灯まで､見届けますの",
-                        "comments_my_4": "ひとつひとつ違う､夢の灯火｡まるで､わたくしたちのよう…",
-                        "comments_my_max": "あら…OOちゃまの夏の華は､ここにもいましてよ",
-                        "comments_work_1": "ｽﾃｰｼﾞで見る輝きに､そっくり…",
-                        "comments_work_2": "長く､永く…精一杯､まばゆく…",
-                        "comments_work_3": "羽根がなくとも､飛べますわ♪",
-                        "comments_work_4": "もう､手を伸ばしても届きませんのね｡ほら､あんなにも高く…",
-                        "comments_work_max": "うふっ､そんなに上を向いたら倒れてしまいますわ｡気をつけて",
-                        "comments_work_love_up": "少し､歩きましょう｡ 離れて見ても､灯りは綺麗ですわ｡きっと",
-                        "comments_live": "夢を､空へ｡さぁ､あなたも!",
-                        "comments_love_max": "わたくしも､あの灯のように高みへ参りましょう｡けれど､OOちゃま｡見送りは要りませんわよ｡共に行くのですから"
+                        "comment": "자, 가주세요. 하늘을 떠올라, 저 멀리까지. 후훗, 이별은 아니에요. 언젠가 올려다볼 별빛은, 분명 당신이 비춰주는 불인걸요. 그럼, 좋은 여행을. 저를, 계속 비춰주세요.",
+                        "comments_my_1": "스러지지 않아요. 계속, 마음속에.",
+                        "comments_my_2": "제 곁에서, 봐주세요.",
+                        "comments_my_3": "마지막 등불 하나까지, 지켜볼게요.",
+                        "comments_my_4": "하나하나가 다른, 꿈의 등불. 마치, 우리들처럼…",
+                        "comments_my_max": "어머… OO 쨔마의 여름의 꽃은, 여기에도 있어요.",
+                        "comments_work_1": "스테이지에서 보는 빛, 그대로…",
+                        "comments_work_2": "길게, 영원히… 힘껏, 눈부시게…",
+                        "comments_work_3": "날개가 없더라도, 날 수 있어요♪",
+                        "comments_work_4": "이제, 손을 뻗어도 닿지 않네요. 봐요, 저렇게 높이…",
+                        "comments_work_max": "우훗, 그렇게 위를 향하면 쓰러져버려요. 조심하시길.",
+                        "comments_work_love_up": "조금, 걸을까요. 떨어져서 보더라도, 불빛은 아름다워요. 분명.",
+                        "comments_live": "꿈은, 하늘로. 자, 당신도!",
+                        "comments_love_max": "저도, 저 등불처럼 높이 가죠. 하지만, OO 쨔마. 배웅은 필요 없어요. 함께 가니까요."
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1542002/idolcomment.mp3",
@@ -3023,20 +3023,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "夕暮れに照らされた､雪景色…｡異国の地というより､おとぎの国にいるようですわね♪わたくしはさながら､月の妖精? では､OOちゃま…妖精の戯れにお付き合いください♪",
-                        "comments_my_1": "楽しい旅は､終わりませんわ",
-                        "comments_my_2": "ｲﾀｽﾞﾗな視線は､あなただけに♪",
-                        "comments_my_3": "ｸﾞｰﾃﾝ･ｱｰﾍﾞﾝﾄ♪ﾊﾞｯﾁﾘですわ♪",
-                        "comments_my_4": "旅の不安よりﾄﾞｷﾄﾞｷばかり｡わたくし､一人前のﾚﾃﾞｨですもの",
-                        "comments_my_max": "この二人旅…OOちゃまとずうっと水入らずですわ♪",
-                        "comments_work_1": "わたくしを､捕まえていて…♪",
-                        "comments_work_2": "ﾄﾗﾝｸいっぱいに､想い出が…",
-                        "comments_work_3": "月の美しさは､変わりませんね",
-                        "comments_work_4": "ふかふかの雪の上…｡まるで､夢の中を歩いているようです",
-                        "comments_work_max": "OOちゃま､手を…｡転んだら大変ですもの､ｳﾌ♪",
-                        "comments_work_love_up": "ほら､OOちゃま♪二人の足跡､この道に刻みましょう",
-                        "comments_live": "隣で､ご覧になって♪",
-                        "comments_love_max": "初めての景色にﾜｸﾜｸ､OOちゃまとの旅にﾄﾞｷﾄﾞｷ…二つが重なって､心が大忙しですわ｡ほら､感じてくださいまし♪"
+                        "comment": "황혼에 비춰진, 설경…. 이국의 땅이라기보단, 동화의 나라에 있는 듯하네요♪ 저는 마치, 달의 요정? 그럼, OO 쨔마… 요정의 장난에 어울려주세요♪",
+                        "comments_my_1": "즐거운 여행은, 끝나지 않아요.",
+                        "comments_my_2": "짓궂은 장난가득한 시선은, 당신에게만♪",
+                        "comments_my_3": "Guten･Abend♪ 잘 되고 있어요♪",
+                        "comments_my_4": "여행의 불안보다 두근거림만을. 저, 한 사람 몫의 레이디인걸요.",
+                        "comments_my_max": "이 두사람의 여행… OO 쨔마와 쭈욱 우리끼리만이에요♪",
+                        "comments_work_1": "저를, 붙잡고 있어 주시길…♪",
+                        "comments_work_2": "트렁크 가득히, 추억이…",
+                        "comments_work_3": "달의 아름다움은, 변하지 않네요.",
+                        "comments_work_4": "폭신폭신한 눈 위…. 마치, 꿈 속을 걷는 것 같아요.",
+                        "comments_work_max": "OO 쨔마, 손을…. 넘어지면 큰일인걸요, 우후♪",
+                        "comments_work_love_up": "자, OO 쨔마♪ 두사람의 발자국, 이 길에 새기죠.",
+                        "comments_live": "곁에서, 봐주시길♪",
+                        "comments_love_max": "처음 보는 경치에 두근두근, OO 쨔마와의 여행에 두근두근… 둘이 겹쳐져, 마음이 바쁘네요. 자, 느껴주시면 좋겠어요♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1444901/idolcomment.mp3",
@@ -3102,20 +3102,20 @@ kg
                         "card_cv": "照井春佳"
                     },
                     "comments": {
-                        "comment": "空に輝く月こそが､帰るべき故郷…｡でもわたくしは､地上にしかない煌めきに…あなたという星の光に､魅せられてしまいましたの｡だから､わたくしのことは…二人だけの秘密､ですわよ♪",
-                        "comments_my_1": "楽しい旅は､終わりませんわ",
-                        "comments_my_2": "ｲﾀｽﾞﾗな視線は､あなただけに♪",
-                        "comments_my_3": "わたくしを虜に…罪ですわね♪",
-                        "comments_my_4": "月の姫の心…｡撮影のお仕事でも､つい入れ込んでしまいますわ",
-                        "comments_my_max": "OOちゃまとの逃避行なら､きっと…♪",
-                        "comments_work_1": "わたくしを､捕まえていて…♪",
-                        "comments_work_2": "ﾄﾗﾝｸいっぱいに､想い出が…",
-                        "comments_work_3": "あなたの心も､わたくしのﾓﾉ…",
-                        "comments_work_4": "ﾜｶﾞﾏﾏのために､しきたりに背いて…ちょっぴりｲｹﾅｲ気分ですの",
-                        "comments_work_max": "豪華な月の宮殿より､わたくしはOOちゃまの隣が…",
-                        "comments_work_love_up": "月の使者が見ているかも｡わたくしのこと､守ってくださいまし",
-                        "comments_live": "あなたはもしや､月の使者?",
-                        "comments_love_max": "ふふっ…まさに名演､でしたかしら♪でも､地上の星に魅せられたという言葉も､その想いも…演技だけではないのですから♪"
+                        "comment": "하늘에 빛나는 달이야말로, 돌아가야 할 고향…. 하지만 저는, 지상에밖에 없는 반짝임에… 당신이라는 별빛에, 매혹되고 말았어요. 그러니까, 저에 대해선… 두사람만의 비밀, 이에요♪",
+                        "comments_my_1": "즐거운 여행은, 끝나지 않아요.",
+                        "comments_my_2": "짓궂은 장난가득한 시선은, 당신에게만♪",
+                        "comments_my_3": "저를 포로로… 죄예요♪",
+                        "comments_my_4": "달의 공주의 마음…. 촬영 일이라도, 무심코 빠져들어버려요.",
+                        "comments_my_max": "OO 쨔마와의 도피행이라면, 반드시…♪",
+                        "comments_work_1": "저를, 붙잡고 있어 주시길…♪",
+                        "comments_work_2": "트렁크 가득히, 추억이…",
+                        "comments_work_3": "당신의 마음도, 저의 것…",
+                        "comments_work_4": "제멋대로 굴기 위해서, 관례를 어겨서… 조금 바람직하지 않은 기분이에요.",
+                        "comments_work_max": "호화로운 달의 궁전보다, 저는 OO 쨔마의 곁이…",
+                        "comments_work_love_up": "달의 사자가 보고 계실지도. 저를, 지켜 주시면 좋겠어요.",
+                        "comments_live": "당신은 혹시, 달의 사자?",
+                        "comments_love_max": "후훗… 정말로 명연기, 였을까요♪ 하지만, 지상의 별에 매혹되었다는 말도, 그 마음도… 연기만은 아니었으니까요♪"
                     },
                     "voice": {
                         "comment": "https://raw.githubusercontent.com/uhlmkashim/anniversary/master/sound/1544902/idolcomment.mp3",
